welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:7: error: ';' expected but integer literal found.
  if(Math.abs(b))<=10){a=true
                   ^