welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
var a :Boolean=false

def nearHundred(n:Int): Boolean = {
	b=n-100
  c=n-200
  
  if(Math.abs(b))<=10){a=true
  }else if (Math.abs(c)<=10){a=true}


return a

}